--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> <!-- icon cdn -->
-    <link href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/6befbe471f.js" crossorigin="anonymous"></script> <!-- Font Awesome Icon -->
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"><!-- Tailwind CSS Framework-->
-    <title>Template Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Basic Vue Js - HelloWorld App</title>
+
+  <!-- https://google.github.io/material-design-icons/#icon-font-for-the-web -->
+  <!-- Using via Google Web Fonts -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+  <!-- https://tailwindcss.com/docs/installation -->
+  <!-- Using Tailwind via CDN -->
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+
+  <!-- https://v3.vuejs.org/guide/installation.html#release-notes -->
+  <!-- Vue CDN -->
+  <script src="https://unpkg.com/vue@next"></script>
+
 </head>
+
 <body>
-    <i class="material-icons">favorite</i>
-    <i class="im im-facebook-messenger"></i>
-    <i class="fas fa-ad"></i>
+  <div id="app" class="h-screen w-full bg-gray-200 flex items-start justify-start">
+    <img src="./images/bkpp.jpg" class="w-1/3 h-full">
+    <div class="w-full flex items-center justify-end">
+      <i class="material-icons">face</i>
+      <p class="font-semibold text-xl tracking-wider uppercase px-3"> {{ msg }}</p>
+    </div>
+  </div>
+
+  <!-- my main.js -->
+  <script src="./main.js"></script>
 </body>
+
 </html>
